Fixed contrast text issues

--- a/chamber/styles/large-index.css
+++ b/chamber/styles/large-index.css
@@ -177,7 +177,7 @@ main {
     font-weight: 500;
     font-size: 1.5rem;
     border-radius: 10px;
-    background-image: linear-gradient(to right, #00A1E4 50%, #eb5a50 50%);
+    background-image: linear-gradient(to right, #99191c 50%, #eb5a50 50%);
     background-size: 200% 100%;
     background-position: right bottom;
     color: white;
@@ -291,6 +291,7 @@ h3 {
     margin: 0;
     padding: 0.45rem;
     font-weight: 400;
+    color: black;
 }
 
 .card:hover {
